--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,43 @@ body{
   font-style: oblique;
   display: inline;
 }
+#höger{
+  background-color: rgb(255, 255, 255);
+  grid-area: h;
+}
+#vänster{
+   background-color: rgb(255, 255, 255);
+   grid-area: v;
+}
+#ovan{
+   background-color: rgb(255, 255, 255);
+   grid-area: t;
+}
+
+#bottom{
+   background-color: rgb(255, 255, 255);
+   grid-area: b;
+}
+
+#topright{
+   background-color: rgb(255, 255, 255);
+   grid-area:tr ;
+}
+#topleft{
+   background-color: rgb(255, 255, 255);
+   grid-area: tl;
+}
+#bottomleft{
+   background-color: rgb(255, 255, 255);
+   grid-area: bl;
+}
+
+#bottomright{
+   background-color: rgb(255, 255, 255);
+   grid-area: br;
+}
+
+.karta{
+   /*background-color: rgb(255, 255, 255);*/
+   grid-area:m;
+}
