--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,11 @@ body{
   font-style: oblique;
   display: inline;
 }
+
+.jacuni{
+  background:url(../img/Nerau.jpg) ;
+}
+
 #höger{
   background-color: rgb(255, 255, 255);
   grid-area: h;
