ehmmmm. found error

--- a/css/grid.css
+++ b/css/grid.css
@@ -8,6 +8,6 @@
     "v v v m tr tr tr"
     "bl bl bl b br br br"
     "bl bl bl b br br br"
-    "bl bl bl bl b br br br"
+    "bl bl bl b br br br "
     ;
 }
