--- a/css/grid.css
+++ b/css/grid.css
@@ -4,10 +4,10 @@
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: repeat(5, 300px); 
     grid-template-areas: 
-    "tl tl tl t tr tr tr"
-    "v v v m tr tr tr"
+    "v v v m r r r"
     "bl bl bl b br br br"
     "bl bl bl b br br br"
+    "bl bl bl b br br br "
     "bl bl bl b br br br "
     ;
 }
