--- a/css/grid.css
+++ b/css/grid.css
@@ -4,12 +4,12 @@
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(6, 250px); 
     grid-template-areas: 
-    "tl tl tl t tr tr tr tr"
-    "v v v m h h h h"
-    "bl bl bl b br br br br"
-    "bl bl bl b br br br br"
-    "bl bl bl b br br br br"
-    "bl bl bl b br br br br"
+    "tl tl tl tr t tr tr tr"
+    "v v v v m  h h h"
+    "bl bl bl br b br br br"
+    "bl bl bl br b br br br"
+    "bl bl bl br b br br br"
+    "bl bl bl br b br br br"
 
     ;
 }
