--- a/css/grid.css
+++ b/css/grid.css
@@ -1,10 +1,10 @@
 .jacuni{
     height: 100%;
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: repeat(8, 256px);
     grid-template-rows: repeat(6, 250px); 
     grid-template-areas: 
-    "tl tl tl tr t tr tr tr"
+    "tl tl tl tl t tr tr tr"
     "v v v v m  h h h"
     "bl bl bl br b br br br"
     "bl bl bl br b br br br"
