--- a/css/grid.css
+++ b/css/grid.css
@@ -5,7 +5,7 @@
     grid-template-rows: repeat(6, 250px); 
     grid-template-areas: 
     "tl tl tl t tr tr tr tr"
-    "v v v m h h h h"
+    "v v m m h h h h"
     "bl bl bl b br br br br"
     "bl bl bl b br br br br"
     "bl bl bl b br br br br"
