--- a/css/grid.css
+++ b/css/grid.css
@@ -2,10 +2,11 @@
     display: grid;
     width: 2048px;
     grid-template-columns: repeat(8, 256px);
-    grid-template-rows: repeat(6, 250px); 
+    grid-template-rows: repeat(7, 210px); 
     grid-template-areas: 
     "tl tl tl t tr tr tr tr"
     "v v m m h h h h"
+    "bl bl bl b br br br br"
     "bl bl bl b br br br br"
     "bl bl bl b br br br br"
     "bl bl bl b br br br br"
