--- a/css/style.css
+++ b/css/style.css
@@ -111,9 +111,14 @@ body{
    grid-area: br;
 }
 
-.karta{
+#karta{
    background-color: rgb(255, 255, 255);
    grid-area:m;
+}
+
+#karta{
+  background-color: rgb(255, 255, 255);
+  grid-area:m2;
 }
 
 .mas{
