--- a/css/style.css
+++ b/css/style.css
@@ -116,9 +116,9 @@ body{
    grid-area:m;
 }
 
-#karta{
+#karta2{
   background-color: rgb(255, 255, 255);
-  grid-area:m2;
+  grid-area:mm;
 }
 
 .mas{
