--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ body{
   overflow:auto;
 }
 
+.Undermeny{
+  margin-bottom: 20px;
+}
+
+
 .dropdown_konflikter:hover .dropdown_konflikter-content {
   display: block;
 }
@@ -25,7 +30,7 @@ body{
   display: none;
   position: absolute;
   background-color:rgb(33, 123, 157);
-  min-width: 75px;
+  min-width: 100px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 12px 16px;
   z-index: 1;
@@ -44,7 +49,8 @@ body{
   display: none;
   position: absolute;
   background-color:rgb(33, 123, 157);
-  min-width: 75px;
+  min-width: 150px;
+  min-height: 225px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 12px 16px;
   z-index: 1;
