--- a/css/grid.css
+++ b/css/grid.css
@@ -4,8 +4,8 @@
     grid-template-columns: repeat(8, 256px);
     grid-template-rows: repeat(7, 210px); 
     grid-template-areas: 
-    "tl tl tl mm tr tr tr tr"
-    "v v m m h h h h"
+    "tl se1 se1 se1 tr tr tr tr"
+    "v v se2 se2 h h h h"
     "bl bl bl b br br br br"
     "bl bl bl b br br br br"
     "bl bl bl b br br br br"
@@ -13,3 +13,6 @@
     "bl bl bl b br br br br"
     ;
 }
+/* Se = Syns
+Se = Det som syns rad 1
+*/
